[package]
name = "bitcoin-adapter"
# Inherit other fields from the workspace
version.workspace = true
edition = "2021"
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# [BPC-3] Protocol compliance tracking
[package.metadata.bip]
implemented = [
    "bip-174",  # PSBT
    "bip-341",  # Taproot
    "bip-370"   # PSBTv2
]

[package.metadata.audit]
last_verified = "2025-03-20"
security_level = "bpc-3" 

[dependencies]
bitcoin = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
