[package]
name = "cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
anya-core-pkg = { path = "../anya-core-pkg", features = ["bip341"] }
tokio = { workspace = true, features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "anya-cli"
path = "src/main.rs"
