[package]
name = "anya-cli"
version.workspace = true
edition = "2021"
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "anya-cli"
path = "src/main.rs"

[dependencies]
anya-core = { path = "../core", features = ["web5", "hsm"] }
clap = { version = "4.4.0", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"

[target.'cfg(unix)'.dependencies]
nix = "0.28.0"

[build-dependencies]
vergen = { version = "8.3.1", features = [
    "build",
    "git",
    "gitcl"
] } 
