[package]
name = "anya-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "anya-cli"
path = "src/main.rs"

[dependencies]
anya-core = { path = "../core", features = ["web5", "hsm"] }
clap = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[build-dependencies]
vergen = { workspace = true } 