[package]
name = "anya-core"
version = "0.1.0-rc.1"
edition = "2021"

[dependencies]
bitcoin.workspace = true
secp256k1.workspace = true
serde.workspace = true
libp2p = { workspace = true, features = ["tcp", "websocket", "noise", "yamux"] }
tokio = { workspace = true, features = ["full"] }
mobile-sdk = { path = "../mobile-sdk" }

# Cryptographic primitives
k256 = { version = "0.13.3", features = [
    "ecdsa",
    "sha256",
    "std"
] }
sha2 = "0.10.8"
hmac = "0.12.1"

# Security auditing
cargo-audit = { version = "0.18.3", optional = true }

# Update Web5 dependencies with security features via Git repo
web5 = { git = "https://github.com/decentralized-id/web5.git", tag = "v0.5.1", features = [
    "bip174",
    "bip341",
    "bip370",
    "did-rotation",
    "vc-revocation",
    "silent-leaf"
], default-features = false }

# Add SGX implementation
sgx_urts = { version = "1.1.1", optional = true }

# Change yubihsm to optional
yubihsm = { version = "0.41.0", features = ["mock"], optional = true }

[dev-dependencies]
bip-check = "0.1.0"
web5-test-vectors = "0.2.0"

[features]
default = ["audit"]
audit = ["cargo-audit"]
hardware = ["hsm", "sgx_urts"]
hsm = ["yubihsm", "secp256k1/hsm"]
chaos = [
    "libp2p/chaos",
    "tokio/full"
]
sgx = ["sgx_urts"]
mobile = ["bitcoin/use-serde", "secp256k1/global-context"] 