[package]
name = "anya-core-lib"
version = "0.1.0-rc.1"
edition = "2021"
description = "Core libraries for Anya Bitcoin Framework"
authors = ["bo_thebig <botshelomokokoka@gmail.com>"]
license = "MIT"

[dependencies]
# Bitcoin Core aligned dependencies
bitcoin = { workspace = true }
bitcoin-wallet = { workspace = true, optional = true }
bitcoin_hashes = { workspace = true }
secp256k1 = { workspace = true }
bitcoin_hd = { workspace = true, optional = true }
lightning = { workspace = true, optional = true }

# Core runtime dependencies
serde = { workspace = true }
libp2p = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

# Cryptographic primitives
k256 = { version = "0.13.3", features = [
    "ecdsa",
    "sha256",
    "std"
] }
sha2 = "0.10.8"
hmac = "0.12.1"

# Security auditing
cargo-audit = { version = "0.18.3", optional = true }

# Use a specific version tag to avoid Git issues
web5-rust = "2.0.0-beta9"

# Add SGX implementation
sgx_urts = { version = "1.1.1", optional = true }

# Change yubihsm to optional
yubihsm = { version = "0.41.0", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
mockall = "0.11.3"
tempfile = "3.5.0"
test-log = "0.2.11"

[features]
default = []
mobile = ["bitcoin/serde", "bitcoin/rand-std", "secp256k1/global-context", "secp256k1/rand-std"]
chaos = ["std"]
sgx = ["std"]
std = []
auditing = ["std"]
hardware = ["std"]
hsm = ["yubihsm"]
audit = ["cargo-audit"]

[[bin]]
name = "anya_audit"
path = "src/bin/anya_audit.rs" 