[package]
name = "dlc-oracle"
# Inherit other fields from the workspace
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Cryptographic dependencies
bitcoin = { workspace = true }
secp256k1 = { workspace = true }

# Utility dependencies
serde = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.2"
