[package]
name = "anya-enterprise"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true

[dependencies]
anya-core = { path = "../../anya-core", version.workspace = true }
tokio = { workspace = true }
serde = { workspace = true }

[features]
default = ["zkp", "audit-logging"]
advanced-security = ["secp256k1/zkp", "opentelemetry"]
compliance = []
audit-logging = []

