[package]
name = "anya-installer"
version.workspace = true
edition.workspace = true

# Inherit workspace config
workspace = ".."

[dependencies]
anyhow = "1.0"
sysinfo = "0.29"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
