[package]
name = "mobile-sdk"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Rust SDK for mobile integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anya-org/anya-mobile.git"

[dependencies]
subtle = "2.4"

[dev-dependencies]
# add tests dependencies here if needed
