[package]
name = "anya-mobile"
version.workspace = true
edition = "2021"

[target.'cfg(mobile)'.dependencies]
# Limited to features that are likely to exist
bitcoin = { workspace = true, features = ["std"] }
# Removed unsupported features
secp256k1 = { workspace = true }
jsi = { version = "0.3.0-alpha.5" }

[features]
# Simplified features to avoid compatibility issues
default = []
# Removed feature flags that reference non-existent secp256k1 and bitcoin features
# Disabled features that reference dependencies with problematic or non-existent features
silent-leaf = []
psbt-v2 = []

[dependencies]
# Standardized versions
# Removed features that don't exist in the selected bitcoin version
jsi = { version = "0.3.0-alpha.5" }

# Add missing from external
# Removed non-existent feature psbt-v2
bdk = { workspace = true }

# [BPC-3] Mobile-specific Bitcoin requirements
# react-native-bitcoin dependency removed - package not found

# [AIS-3] Mobile security profile
[profile.release]
codegen-units = 1
lto = true
panic = "abort"

# Removed problematic features
anya-secrets = { path = "../anyacore" }

[package.metadata]
research-tier = "Project"  # [BPC-3] Codebase classification
bitcoin-compliance = { level = 2 } 
