[package]
name = "anya-scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
tempfile = "3.2"
walkdir = "2.3"
regex = "1.5"
chrono = "0.4"
toml = "0.7"
futures = "0.3"
git2 = "0.17"
indicatif = "0.17"
colored = "2.0"

[[bin]]
name = "run_fixes"
path = "run_fixes.rs"

[[bin]]
name = "run_progress"
path = "run_progress.rs"