name = "anya-bitcoin"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Inherited cryptographic stack
secp256k1.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true

# Taproot Implementation (BIP 341)
bdk = { workspace = true, features = ["taproot"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3.17"

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"

[features]
default = ["bip174", "bip341"]


default = ["bip174", "bip341"]

