[package]
name = "anya-bitcoin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
# Inherited cryptographic stack
secp256k1.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true

# BDK Wallet for Bitcoin functionality
bdk_wallet = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3.17"

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"

[features]
default = ["bip174", "bip341"]
