[package]
name = "anya-core-mobile"
version.workspace = true
edition.workspace = true
description = "Mobile extensions for Anya Core"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
anya-core-core = { path = "../../packages/core" }
anya-core-protocol-adapters = { path = "../../packages/protocol-adapters" }

# External dependencies
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["bip342"]
bip342 = []
